src/components/AaJumbotron/AaJumbotron.scss
@import "../all.sass";
@import "~animate.css";

.aaJumbotron {
    padding: 0;
    margin-bottom: 0;
    height: auto;
    padding-top: 150px;
    p {
        margin: 10px 0 50px 0;
        max-width: 450px;
    }
    @media (min-width: 768px) {
        padding: 0;
        margin-bottom: 0;
        height: 100vh;
        padding-top: 0;
    }
}

.jumbotron-container {
    height: 100%;
    color: #FFFFFF;
    align-items: center;
    display:flex;
}

.overlayhero{
    .jumbotron-container {
        background-color:rgba(0, 0, 0, 0.5);
    }
}

.aaJumbotron h1 {
    font-weight: bold;
    font-size: 50px;
}

.aaJumbotron .btn {
    border-radius: 0;
    font-size: 20px;
    background-image: none;
    border-width:0;
    &:hover {
        background-image: none;
    }
}

.heroimage.tophero {
    // margin-top: -115px;
    h1 {
        font-size: 3em;
        @media (min-width: 768px) {
            margin-top: 70px;
            margin-left: -8px;
            font-size: 10vw;
        }
    }
}

